--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Roslynn's Ramblins
+subtitle: This is a cute subtitle
+author: Roslynn Graves
 simple_search: https://www.google.com/search
-description:
+description: Quick description...
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
