--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://r0mg.github.io
 title: Roslynn's Ramblins
 subtitle: This is a cute subtitle
 author: Roslynn Graves
